# cipi

./: .gitignore  CMakeLists.txt  README
doc/: .gitignore  CMakeLists.txt  alotofstuff.bib  manual.tex
src/: .gitignore  CMakeLists.txt  Marginals.cpp  Marginals.h  PARAM  coefficients.py  product_coefficients.py  todolist
tags/release-0.8/: AUTHORS
tags/release-0.8/doc/: manual.tex
tags/release-0.8/src/: ConfigFile.cpp  Marginal.cpp  PARAM  todolist
trunk/: INSTALL
trunk/doc/: manual.tex
trunk/src/: CMakeLists.txt  COPYING  Marginal.cpp  Marginal.h  Marginals.cpp  Marginals.h  PARAM  functions.cpp  functions.h  input  main.cpp  todolist
